--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,18 +1,6 @@
-/* body {
-  background-color: white;
-  color: hsla(0, 0%, 60%, 1);
-  font-family: Verdana, sans-serif;
-  font-size: 18px;
-  padding: 0;
-  margin: 0;
-}
-
-circle {
-  opacity: 0.3;
-} */
-
 .board {
   background-color: pink;
+  margin-left: 25%;
 }
 
 .cell {
